--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -2,7 +2,7 @@
   "api.errors.ApiMethodNotYetImplementedError": "This API method is not yet implemented.",
   "api.errors.GenericApiError": "An error occurred, please try again later.",
   "api.errors.IncorrectPasswordError": "Incorrect wallet password.",
-  "api.errors.NotEnoughMoneyToSendError": "Not enough ADA to make this transaction.",
+  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
   "api.errors.PromiseNotCalledYetError": "Result accessed before execution finished.",
   "api.errors.ReportRequestError": "There was a problem sending the support request.",
   "api.errors.WalletAlreadyImportedError": "The wallet you are trying to import already exists.",
@@ -463,7 +463,7 @@
   "wallet.dashboard.stakePool.stake": "Stake",
   "wallet.dashboard.stakePool.title": "Stake Pool Delegated",
   "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
-  "wallet.dashboard.summary.adaTitle": "Total ADA",
+  "wallet.dashboard.summary.adaTitle": "Total {ticker}",
   "wallet.dashboard.summary.delegatedTitle": "Total Delegated",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} can be corrected",
   "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} cannot be corrected",
